Fix chatroom Change button expanding on mobile screens
Added CSS override in mobile media query to keep username Change button compact instead of full width

--- a/.templates/demo/static/style.css
+++ b/.templates/demo/static/style.css
@@ -463,6 +463,10 @@ pre code {
   button {
     width: 100%;
   }
+  
+  .username-display button {
+    width: auto;
+  }
 }
 
 /* Loading states */
